--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch --coverage"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch --coverage  --testPathPattern="
   },
   "repository": {
     "type": "git",
